--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-native-router-flux": "^4.0.6",
     "react-native-web": "^0.11.7",
     "react-redux": "^7.1.1",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-persist": "^5.6.12",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0"
